made initial layout of the page

--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+      <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam inventore ipsa nobis et aliquam aspernatur quae velit animi laboriosam sapiente doloribus, sunt eos incidunt voluptas, rem praesentium! Dolore, pariatur sapiente?</article>
     </section>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
+      <div class="grid"></div>
     </section>
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
+      <article>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo tempore deserunt totam! Tenetur, ipsam recusandae! Consequatur, aut. Odio rem, architecto sunt explicabo ipsam debitis magni maxime dignissimos voluptas labore repudiandae.</article>
     </section>
   </main>
+  <footer>This is a footer</footer>
 </body>
 
 </html>
