--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
-      <div class="grid"></div>
+      <div class="grid">
+        <div class="gridElement main-work"></div>
+        <div class="gridElement otherWork-1"></div>
+        <div class="gridElement otherWork-2"></div>
+        <div class="gridElement otherWork-3"></div>
+        <div class="gridElement otherWork-4"></div>
+      </div>
     </section>
 
     <!-- contact -->
