fixed grid and added title and subtitle for work

--- a/index.html
+++ b/index.html
@@ -31,18 +31,46 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
-      <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam inventore ipsa nobis et aliquam aspernatur quae velit animi laboriosam sapiente doloribus, sunt eos incidunt voluptas, rem praesentium! Dolore, pariatur sapiente?</article>
+      <article>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, magnam. Officia, quisquam ex pariatur ducimus dolorem, nisi eligendi laboriosam excepturi expedita sapiente molestiae mollitia odit deserunt quasi fuga vero? Ullam.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate odio a ratione fugiat, porro saepe eaque cupiditate distinctio. Neque aut laudantium ut, et quia sapiente optio expedita iste sunt reprehenderit?</p>  
+      </article>   
     </section>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
       <div class="grid">
-        <div class="gridElement main-work"></div>
-        <div class="gridElement otherWork-1"></div>
-        <div class="gridElement otherWork-2"></div>
-        <div class="gridElement otherWork-3"></div>
-        <div class="gridElement otherWork-4"></div>
+        <div class="gridElement main-work">
+          <div class="titlebox">
+            <h3>Title</h3>
+            <p>Subtitle</p>
+          </div>
+        </div>
+        <div class="gridElement otherWork-1">
+          <div class="titlebox">
+            <h3>Title</h3>
+            <p>Subtitle</p>
+          </div>
+        </div>
+        <div class="gridElement otherWork-2">
+          <div class="titlebox">
+            <h3>Title</h3>
+            <p>Subtitle</p>
+          </div>
+        </div>
+        <div class="gridElement otherWork-3">
+          <div class="titlebox">
+            <h3>Title</h3>
+            <p>Subtitle</p>
+          </div>
+        </div>
+        <div class="gridElement otherWork-4">
+          <div class="titlebox">
+            <h3>Title</h3>
+            <p>Subtitle</p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -53,6 +81,7 @@
     </section>
   </main>
   <footer>This is a footer</footer>
+
 </body>
 
 </html>
