added photos to apps changed banner, reworked color scheme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
+  <title>Alexnadru Pandelea // Web Developer</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -14,16 +14,16 @@
   <navbar id="navbar">
     <h1>Alexandru Pandelea</h1>
     <ul class="nav-list">
-        <li><a href="">About me</a></li>
-        <li><a href="">Portofolio</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#about">About me</a></li>
+        <li><a href="#work">Portofolio</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
   </navbar>
 
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>Best portofolio ever!</h2>
     </div>
   </section>
 
@@ -43,32 +43,32 @@
       <div class="grid">
         <div class="gridElement main-work">
           <div class="titlebox">
-            <h3>Title</h3>
-            <p>Subtitle</p>
+            <h3>App</h3>
+            <p>Coming Soon!</p>
           </div>
         </div>
         <div class="gridElement otherWork-1">
           <div class="titlebox">
-            <h3>Title</h3>
-            <p>Subtitle</p>
+            <h3>App</h3>
+            <p>Coming Soon!</p>
           </div>
         </div>
         <div class="gridElement otherWork-2">
           <div class="titlebox">
-            <h3>Title</h3>
-            <p>Subtitle</p>
+            <h3>App</h3>
+            <p>Coming Soon!</p>
           </div>
         </div>
         <div class="gridElement otherWork-3">
           <div class="titlebox">
-            <h3>Title</h3>
-            <p>Subtitle</p>
+            <h3>App</h3>
+            <p>Coming Soon!</p>
           </div>
         </div>
         <div class="gridElement otherWork-4">
           <div class="titlebox">
-            <h3>Title</h3>
-            <p>Subtitle</p>
+            <h3>App</h3>
+            <p>Coming Soon!</p>
           </div>
         </div>
       </div>
@@ -77,7 +77,11 @@
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
-      <article>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo tempore deserunt totam! Tenetur, ipsam recusandae! Consequatur, aut. Odio rem, architecto sunt explicabo ipsam debitis magni maxime dignissimos voluptas labore repudiandae.</article>
+      <div class="contactbox">
+      <a href="">Email</a>
+      <a href="">0777272777</a>
+      <a href="">GitHub</a>
+      </div>
     </section>
   </main>
   <footer>This is a footer</footer>
