added working links, picture and responsivness

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Alexnadru Pandelea // Web Developer</title>
+  <title>Alexandru Pandelea // Web Developer</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -22,6 +22,7 @@
 
   <!-- hero banner -->
   <section class="hero-banner">
+    <img src="../alexandru-portofolio-page/assets/images/me.jpg" alt="Picture of Alexandru">
     <div>
       <h2>Best portofolio ever!</h2>
     </div>
@@ -41,36 +42,36 @@
     <section class="page-section" id="work">
       <h2>Work</h2>
       <div class="grid">
-        <div class="gridElement main-work">
+        <a class="gridElement main-work" href="../alexandru-portofolio-page/workinprogress.html">
           <div class="titlebox">
             <h3>App</h3>
             <p>Coming Soon!</p>
           </div>
-        </div>
-        <div class="gridElement otherWork-1">
+        </a>
+        <a class="gridElement otherWork-1" href="../alexandru-portofolio-page/workinprogress.html">
           <div class="titlebox">
             <h3>App</h3>
             <p>Coming Soon!</p>
           </div>
-        </div>
-        <div class="gridElement otherWork-2">
+        </a>
+        <a class="gridElement otherWork-2" href="../alexandru-portofolio-page/workinprogress.html">
           <div class="titlebox">
             <h3>App</h3>
             <p>Coming Soon!</p>
           </div>
-        </div>
-        <div class="gridElement otherWork-3">
+        </a>
+        <a class="gridElement otherWork-3" href="../alexandru-portofolio-page/workinprogress.html">
           <div class="titlebox">
             <h3>App</h3>
             <p>Coming Soon!</p>
           </div>
-        </div>
-        <div class="gridElement otherWork-4">
+        </a>
+        <a class="gridElement otherWork-4" href="../alexandru-portofolio-page/workinprogress.html">
           <div class="titlebox">
             <h3>App</h3>
             <p>Coming Soon!</p>
           </div>
-        </div>
+        </a>
       </div>
     </section>
 
@@ -78,13 +79,14 @@
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
       <div class="contactbox">
-      <a href="">Email</a>
-      <a href="">0777272777</a>
-      <a href="">GitHub</a>
+       <a href="#email">Email</a>
+       <a href="#077721998293">0777272777</a>
+       <a href="https://github.com/fumitsukai">GitHub</a>
       </div>
     </section>
   </main>
-  <footer>This is a footer</footer>
+
+  <footer>Made by Alexandru Pandelea</footer>
 
 </body>
 
