fixed links to pics in readme and added a link to refactor

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <section class="page-section" id="work">
       <h2>Work</h2>
       <div class="grid">
-        <a class="gridElement main-work" href="../alexandru-portofolio-page/workinprogress.html">
+        <a class="gridElement main-work" href="https://fumitsukai.github.io/code-refactor/">
           <div class="titlebox">
-            <h3>App</h3>
-            <p>Coming Soon!</p>
+            <h3>Code Refactor</h3>
+            <p>Search Engine Optimization</p>
           </div>
         </a>
         <a class="gridElement otherWork-1" href="../alexandru-portofolio-page/workinprogress.html">
